Wed Feb 19 12:23:19 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-icc-common.h:
          Intel C++ 2013 SP1 Update 2 has adequate C++11 support when
          it is used in GCC 4.7 or higher emulation mode

Tue Feb 18 21:39:29 UTC 2014  Steve Huston  <shuston@riverace.com>

        * rpmbuild/ace-tao.spec: Fixed --with tao, again. Some Linuxen's
          rpmbuild treats %define differently. When in doubt, use %global.

Mon Feb 17 12:10:59 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Process.cpp:
          Only use pragma GCC when using the gcc compiler

Mon Feb 17 11:23:13 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          Added new commandline argument -x which enables Coverity
          Test Analyzer test separation. This is not enabled by
          default because enabling test separation increases the
          size of the Coverity intermediate directory significantly

Fri Feb 14 18:42:12 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Local_Name_Space_T.cpp:
          Fixed coverity warning about unitialized pointer fields

Fri Feb 14 18:37:45 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/IO_Cntl_Msg.inl:
          Fixed coverity warning about unitialized fields

Fri Feb 14 18:11:59 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/gperf/src/Key_List.cpp:
          Fixed problems with old style casts.
          Yogesh Sharma <Yogesh dot Sharma at saabsensis dot com> for
          reporting the bug and supplying a patch. Closes [BUGID:4115].

Fri Feb 14 16:34:46 UTC 2014  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp (dispatch_io_event): Do not dispatch to
          a handler that is suspended. Prevents multiple callbacks to the
          same handler at the same time when multiple threads are dispatching
          and changing registrations at the same time. Fixes Bugzilla 4129.