@@ -1,3 +1,11 @@
+Wed Feb 19 20:25:34 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Compression/rle/RLECompressor.cpp:
+        * ace/config-win32-borland.h:
+        * ace/post.h:
+        * ace/pre.h:
+          Improved C++BuilderXE support
+
 Wed Feb 19 12:23:19 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/config-icc-common.h:
